# duckdb-otlp

./: .clang-tidy  .cmake-format.py  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  README.md  TASKS.md  WASM_EXPLORATION.md  app.js  description.yml  extension_config.cmake  index.html  pyproject.toml  style.css  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  Release.yml  deploy-demo.yml  docker.yml  pages.yml
benchmark/otlp-compaction-probe/: README.md  probe.py
benchmark/otlp-log-ingest/: README.md  run_aws.py  run_local.py  test_run_aws.py  test_run_local.py
benchmark/otlp-query-probe/: README.md  probe.py
cmake/: FindOtlp2Records.cmake
demo/: app.js  index.html  otlp.duckdb_extension.wasm  style.css
docker/duckdb-otlp-server/: Dockerfile  Dockerfile.runtime  entrypoint.sh
docs/: README.md  SCHEMA.md  architecture.md  clickhouse-compatibility.md  demo.md  get-started.md  metrics_helpers.md
docs/cookbook/: README.md
docs/guides/: README.md  analyzing-traces.md  building-dashboards.md  cookbook.md  error-handling.md  exporting-to-parquet.md  filtering-logs.md  otel-collector-demo-exports.md  stream-to-ducklake.md  stream-to-iceberg.md  working-with-metrics.md
docs/internal/: COMPETITIVE_POSITIONING.md  V1_SLOP_REPORT.md
docs/plans/: 2026-01-12-rust-backend-migration-design.md
docs/quickstart/: README.md  serve.md
docs/reference/: api.md  error-handling.md  logs-schema.md  metrics-schema.md  performance.md  schemas.md  serve.md  traces-schema.md  type-system.md
docs/schema/: README.md
docs/setup/: collector.md  installation.md  otel-demo.md  sample-data.md
notebooks/: duckdb_otlp_colab.ipynb
samples/: traces.pb
scripts/: benchmark_catalog_ingest.py  build-wasm-demo.sh  generate_proto.sh  generate_protos.sh  generate_test_data.py  setup-hooks.sh  smoke_test.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/scripts/: sync-content.mjs
src/: columnar_ring_buffer.cpp  duckspan_extension.cpp  format_detector.cpp  format_detector_wasm.cpp  json_parser.cpp  otlp_arrow.cpp  otlp_catalog.cpp  otlp_column_promote.cpp  otlp_columnar_scan.cpp  otlp_columnar_table_entry.cpp  otlp_disk_buffer.cpp  otlp_disk_codec.cpp  otlp_metrics_union_scan.cpp  otlp_metrics_union_table_entry.cpp  otlp_receiver.cpp  otlp_request.cpp  otlp_scan.cpp  otlp_schema.cpp  otlp_schema_entry.cpp  otlp_server.cpp  otlp_server_grpc.cpp  otlp_server_http.cpp  otlp_start_stop.cpp  otlp_storage.cpp  otlp_storage_extension.cpp  otlp_storage_extension_wasm.cpp  otlp_table_entry.cpp  otlp_transaction.cpp  otlp_uri.cpp  protobuf_parser.cpp  protobuf_parser_wasm.cpp  read_otlp.cpp  ring_buffer.cpp  row_builders.cpp  row_builders_traces_logs.cpp  schema_bridge.cpp
src/buffer/: columnar_ring_buffer.cpp  columnar_ring_buffer.hpp
src/catalog/: otlp_catalog.cpp  otlp_catalog.hpp  otlp_schema.cpp  otlp_schema.hpp  otlp_schema_entry.cpp  schema_bridge.cpp  schema_bridge.hpp
src/function/: otlp_metrics_union.cpp  otlp_metrics_union.hpp  read_otlp.cpp  read_otlp.hpp  read_otlp_rust.cpp
src/include/: columnar_ring_buffer.hpp  duckspan_extension.hpp  format_detector.hpp  json_parser.hpp  otlp_arrow.hpp  otlp_catalog.hpp  otlp_column_promote.hpp  otlp_columnar_scan.hpp  otlp_columnar_table_entry.hpp  otlp_disk_buffer.hpp  otlp_disk_codec.hpp  otlp_extension.hpp  otlp_helpers.hpp  otlp_ingest_limits.hpp  otlp_log.hpp  otlp_metrics_schemas.hpp  otlp_metrics_union_scan.hpp  otlp_metrics_union_schema.hpp  otlp_metrics_union_table_entry.hpp  otlp_receiver.hpp  otlp_request.hpp  otlp_scan.hpp  otlp_schema_entry.hpp  otlp_server.hpp  otlp_server_internal.hpp  otlp_sql_util.hpp  otlp_start_stop.hpp  otlp_storage.hpp  otlp_storage_extension.hpp  otlp_storage_info.hpp  otlp_table_entry.hpp  otlp_transaction.hpp  otlp_types.hpp  otlp_uri.hpp  otlp_utils.hpp  protobuf_parser.hpp  read_otlp.hpp  ring_buffer.hpp  row_builders.hpp  row_builders_traces_logs.hpp
src/parsers/: format_detector.cpp  json_parser.cpp  json_parser.hpp  protobuf_parser.cpp  protobuf_parser.hpp
src/receiver/: otlp_helpers.hpp  otlp_receiver.cpp  otlp_receiver.hpp  row_builders.cpp  row_builders_metrics.cpp  row_builders_metrics.hpp  row_builders_traces_logs.cpp  row_builders_traces_logs.hpp
src/schema/: otlp_logs_schema.hpp  otlp_metrics_schemas.hpp  otlp_metrics_union_schema.hpp  otlp_traces_schema.hpp  otlp_types.hpp
src/server/: main.cpp  server_config.cpp  server_config.hpp
src/storage/: duckspan_extension.cpp  otlp_extension.cpp  otlp_extension.hpp  otlp_storage_extension.cpp  otlp_storage_info.hpp  otlp_transaction.cpp
src/table/: otlp_columnar_scan.cpp  otlp_columnar_scan.hpp  otlp_columnar_table_entry.cpp  otlp_columnar_table_entry.hpp
src/wasm/: format_detector_stub.cpp  format_detector_wasm.cpp  otlp_storage_extension_wasm.cpp  protobuf_parser_stub.cpp  protobuf_parser_wasm.cpp
test/: generate_test_data.py
test/cpp/: test_arrow_harness.cpp  test_seal_harness.cpp
test/data/: logs_nulls.jsonl  malformed.jsonl  metrics_all_types.jsonl  metrics_exp_histogram_ndjson.jsonl  metrics_histogram_ndjson.jsonl  metrics_nulls.jsonl  metrics_optional_fields.jsonl  metrics_simple.jsonl  metrics_summary_only.jsonl  metrics_temporality_strings.jsonl  multifile_malformed_traces.jsonl  multifile_valid_traces.jsonl  single_trace.jsonl  traces_deep_nesting.jsonl  traces_large_attrs.jsonl  traces_nulls.jsonl  ts_boundary_logs.jsonl  ts_overflow_logs.jsonl
test/manual/: otap_serve_arrow_stream.py  otap_serve_df_engine.py  otap_serve_grpc.py  otlp_serve_concurrency.py  otlp_serve_grpc.py  otlp_serve_parquet.py  otlp_serve_promote.py
test/python/: test_concurrency.py  test_otlp_export.py
test/scripts/: test_benchmark_catalog_ingest.py
test/server/: test_server_config.py
test/sql/: attach_detach.test  concurrency.test  duckspan.test  otlp.test  otlp_serve.test  read_otap.test  read_otlp_basic.test  read_otlp_concurrent.test  read_otlp_edge_cases.test  (+17 more)
(+88 files in other folders)
