[project]
name = "quackspan"
version = "0.1.0"
description = "DuckDB extension development tools"
requires-python = ">=3.8"
dependencies = [
    "pre-commit>=3.5.0",
    "black==24.*",
    "cmake-format>=0.6.13",
    "cxxheaderparser",
    "pcpp",
    "clang-format==11.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
